<resources>
    <string name="app_name">ReadRss</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_usa">USA</string>
    <string name="nav_africa">Africa</string>
    <string name="nav_asia">Asia</string>
    <string name="nav_middle_east">Middle East</string>
    <string name="nav_europe">Europe</string>
    <string name="nav_americas">Americas</string>
    <string name="nav_science_technology">Science and Technology</string>
    <string name="nav_economy">Economy</string>
    <string name="nav_health">Health</string>
    <string name="nav_arts_entertainment">Entertainment</string>
    <string name="nav_usa_vote">2016 USA Votes</string>
    <string name="nav_features">One-Minute Features</string>
    <string name="nav_voa_editors_picks">VOA Editors Picks</string>
    <string name="nav_day_in_photo">Day in Photos</string>
    <string name="nav_extra_time">Shaka: Extra Time</string>
    <string name="nav_visiting">Visiting the USA</string>
    <string name="nav_exit">Exit</string>
    <string name="nav_deleteDatabase">Delete database</string>
    <string name="nav_setting">Setting</string>
    <!-- Fragment Main Text -->
    <string name="fragment_main_text">Main Fragment</string>
    <string name="fragment_main_title">Title : </string>
    <string name="fragment_main_link">Link : </string>
    <string name="fragment_main_description">Description : </string>
    <string name="fragment_main_language">Language : </string>
    <string name="fragment_main_Copyright">Copyright : </string>
    <string name="fragment_main_ttl">TTl : </string>
    <string name="fragment_main_lastBuildDate">LastBuildDate : </string>
    <string name="fragment_main_generator">Generator : </string>
    <string name="fragment_main_atom">Atom : </string>
    <!-- Fragment List Post Text -->
    <string name="fragment_list_post_text">List Fragment</string>
    <!-- Fragment Detail Post Text -->
    <string name="fragment_detail_post_text">Detail Fragment</string>
    <string name="fragment_detail_post_author_title">Author : </string>
    <string name="fragment_detail_post_pubDate_title">Time : </string>
    <string name="fragment_detail_post_category_title">Category : </string>
    <string name="fragment_detail_post_link_title">Link bai viet : </string>
    <!-- Record limit query tblPost -->
    <string name="limit_query_tblPost">20</string>
    <!-- String Dialog FragmentDetail-->
    <string name="dialog_click_link">Open link</string>
    <string name="dialog_click_message">Open link in Browser</string>
    <string name="dialog_click_cancel">Cancel</string>
    <string name="dialog_click_open">Open</string>
    <!-- Facebook App -->
    <string name="facebook_app_id">234452083565721</string>
    <string name="button_facebook_share">share</string>
    <!-- String Dialog -->
    <string name="dialog_main_title">Exit Application</string>
    <string name="dialog_main_message">Do you want exit application ?</string>
    <string name="dialog_main_yes">Yes</string>
    <string name="dialog_main_no">No</string>
    <!-- String ProgressDialog -->
    <string name="progress_read_rss_async_message">Please wait load data</string>
    <!-- String Toast display -->
    <string name="toast_main_error_connect_internet">Connect internet needs update !</string>
    <string name="toast_main_error_connect_database">Error connect database</string>
    <string name="toast_fragment_list_post_het_du_lieu">Het Du Lieu</string>
</resources>
