<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:gravity="center"
        android:paddingBottom="@dimen/text_horizontal_padding"
        android:paddingTop="@dimen/text_horizontal_padding"
        android:text="@string/fragment_main_text"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_title" />

            <TextView
                android:id="@+id/textView_main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_link" />

            <TextView
                android:id="@+id/textView_main_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_description" />

            <TextView
                android:id="@+id/textView_main_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_language" />

            <TextView
                android:id="@+id/textView_main_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_Copyright" />

            <TextView
                android:id="@+id/textView_main_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_ttl" />

            <TextView
                android:id="@+id/textView_main_ttl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_lastBuildDate" />

            <TextView
                android:id="@+id/textView_main_lastBuildDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_generator" />

            <TextView
                android:id="@+id/textView_main_generator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_main_atom" />

            <TextView
                android:id="@+id/textView_main_atom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15" />
        </TableRow>
    </TableLayout>
</LinearLayout>