<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_fragment_detail_post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c4c4c4"
        android:gravity="left"
        android:paddingBottom="@dimen/text_horizontal_padding"
        android:paddingStart="@dimen/text_horizontal_padding"
        android:paddingTop="@dimen/text_horizontal_padding"
        android:text="@string/fragment_detail_post_text"
        android:textColor="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_fragment_detail_post_author_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_detail_post_author_title"
                    android:textSize="@dimen/fragment_detail_post_author_textSize" />

                <TextView
                    android:id="@+id/textView_fragment_detail_post_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="@dimen/fragment_detail_post_author_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_fragment_detail_post_pubDate_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_detail_post_pubDate_title"
                    android:textSize="@dimen/fragment_detail_post_pubDate_textSize" />

                <TextView
                    android:id="@+id/textView_fragment_detail_post_pubDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="@dimen/fragment_detail_post_pubDate_textSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_fragment_detail_post_category_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fragment_detail_post_category_title"
                    android:textSize="@dimen/fragment_detail_post_category_textSize" />

                <TextView
                    android:id="@+id/textView_fragment_detail_post_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fragment_detail_post_category_textSize" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_fragment_detail_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" />

            <TextView
                android:id="@+id/textView_fragment_detail_post_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left" />

            <TextView
                android:id="@+id/textView_fragment_detail_post_guid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <ImageView
                android:id="@+id/imageView_fragment_detail_post_enclosure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal">-->

            <!--</LinearLayout>-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>